<?xml version="1.0" encoding="utf-8"?>

<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory
        android:title="@string/pref_category_interface">

        <androidx.preference.SwitchPreferenceCompat
            android:key="prefKeepScreenOn"
            android:title="@string/pref_keep_screen_on"
            android:summary="@string/pref_keep_screen_on_summary"
            android:defaultValue="true" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="prefShowDecimalCoordinates"
            android:title="@string/pref_show_decimal_coordinates"
            android:summary="@string/pref_show_decimal_coordinates_summary"
            android:defaultValue="false" />

        <androidx.preference.ListPreference
            android:key="prefColorTheme"
            android:title="@string/pref_color_theme"
            android:summary=" "
            android:entries="@array/ColorTheme"
            android:entryValues="@array/ColorThemeValues"
            android:defaultValue="2" />

        <androidx.preference.ListPreference
            android:key="prefShowDirections"
            android:title="@string/pref_show_directions"
            android:summary=" "
            android:entries="@array/ShowDirections"
            android:entryValues="@array/ShowDirectionsValues"
            android:defaultValue="0" />

        <androidx.preference.ListPreference
            android:key="prefShowTrackStatsType"
            android:title="@string/pref_track_stats"
            android:summary=" "
            android:entries="@array/TrackStats"
            android:entryValues="@array/TrackStatsValues"
            android:defaultValue="0" />

        <androidx.preference.ListPreference
            android:key="prefUM"
            android:title="@string/pref_unit_of_measurement"
            android:summary=" "
            android:entries="@array/UM"
            android:entryValues="@array/UMValues"
            android:defaultValue="0" />

        <androidx.preference.ListPreference
            android:key="prefUMSpeed"
            android:title="@string/pref_unit_of_measurement_speed"
            android:summary=" "
            android:entries="@array/UMSpeed_Metric"
            android:entryValues="@array/UMSpeedValues"
            android:defaultValue="1" />

        <androidx.preference.ListPreference
            android:key="prefViewTracksWith"
            android:title="@string/pref_view_tracks_with"
            android:summary=" "
            android:entries="@array/ViewTracksWith"
            android:entryValues="@array/ViewTracksWithValues"
            android:defaultValue="0" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/pref_category_tracking">

        <androidx.preference.ListPreference
            android:key="prefGPSdistance"
            android:title="@string/pref_GPS_distance"
            android:summary=" "
            android:entries="@array/GPSDistance_Metric"
            android:entryValues="@array/GPSDistanceValues"
            android:defaultValue="0" />

        <androidx.preference.ListPreference
            android:key="prefGPSupdatefrequency"
            android:title="@string/pref_GPS_update_frequency"
            android:summary=" "
            android:entries="@array/GPSupdatefrequency"
            android:entryValues="@array/GPSupdatefrequencyValues"
            android:defaultValue="1000" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/pref_category_altitude_corrections">

        <androidx.preference.SwitchPreferenceCompat
            android:key="prefEGM96AltitudeCorrection"
            android:title="@string/pref_EGM96AltitudeCorrection"
            android:summary="@string/pref_EGM96AltitudeCorrection_summary"
            android:defaultValue="false"/>

        <androidx.preference.EditTextPreference
            android:key="prefAltitudeCorrectionRaw"
            android:title="@string/pref_AltitudeCorrection"
            android:summary="@string/pref_AltitudeCorrection_summary_not_defined"
            android:maxLines="1"
            android:defaultValue="0" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/pref_category_exporting">

        <androidx.preference.SwitchPreferenceCompat
            android:key="prefExportTXT"
            android:title="@string/pref_export_TXT"
            android:summary="@string/pref_export_TXT_summary"
            android:defaultValue="false"/>

        <androidx.preference.SwitchPreferenceCompat
            android:key="prefExportGPX"
            android:title="@string/pref_export_GPX"
            android:summary="@string/pref_export_GPX_summary"
            android:defaultValue="true"/>

        <androidx.preference.ListPreference
            android:key="prefGPXVersion"
            android:title="@string/pref_GPX_version"
            android:summary=" "
            android:entries="@array/GPXVersion"
            android:entryValues="@array/GPXVersionValues"
            android:defaultValue="100" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="prefExportKML"
            android:title="@string/pref_export_KML"
            android:summary="@string/pref_export_KML_summary"
            android:defaultValue="true"/>

        <androidx.preference.ListPreference
            android:key="prefKMLAltitudeMode"
            android:title="@string/pref_KML_altitude_mode"
            android:summary=" "
            android:entries="@array/KMLAltitudeMode"
            android:entryValues="@array/KMLAltitudeModeValues"
            android:defaultValue="1" />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>