<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:foreground="@drawable/card_foreground"
    app:cardBackgroundColor="@color/colorCardBackground"
    app:cardCornerRadius="2dp"
    app:cardElevation="3dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/id_imageView_card_pulse"
            android:layout_width="@dimen/thumbSize"
            android:layout_height="@dimen/thumbSize"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:scaleType="center"
            android:src="@mipmap/ic_recording_48dp"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/id_imageView_card_minimap"
            android:layout_width="@dimen/thumbSize"
            android:layout_height="@dimen/thumbSize"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:scaleType="center" />

        <RelativeLayout
            android:id="@+id/id_cardDataTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/id_imageView_card_minimap"
            android:background="@color/colorCardBackground_Title"
            android:padding="5dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/id_textView_card_TrackName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="1dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/textColorCardTitle"
                android:textStyle="bold" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/id_imageView_card_tracktype"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="7dp"
            android:clickable="false" />

        <View
            android:id="@+id/id_card_separator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_cardDataTitle"
            android:layout_margin="0dp"
            android:layout_toEndOf="@+id/id_imageView_card_minimap"
            android:layout_toRightOf="@+id/id_imageView_card_minimap"
            android:background="@color/colorCardBackground_Line"
            android:minHeight="1.7dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_card_separator"
            android:layout_toEndOf="@+id/id_imageView_card_minimap"
            android:layout_toRightOf="@+id/id_imageView_card_minimap"
            android:background="@color/colorCardBackground_Data"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingBottom="2dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/id_textView_card_lengthLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/card_trackinfo_length"
                        android:textAppearance="@style/TextAppearanceCardSmall" />

                    <TextView
                        android:id="@+id/id_textView_card_durationLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/card_trackinfo_duration"
                        android:textAppearance="@style/TextAppearanceCardSmall" />

                    <TextView
                        android:id="@+id/id_textView_card_altitudegapLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/card_trackinfo_altitude_gap"
                        android:textAppearance="@style/TextAppearanceCardSmall" />

                    <TextView
                        android:id="@+id/id_textView_card_geopointsLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:text="@string/card_trackinfo_geopoints"
                        android:textAppearance="@style/TextAppearanceCardSmall" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/id_textView_card_length"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:maxLines="1"
                        android:textAppearance="@style/TextAppearanceCardSmall"
                        android:textColor="@color/textColorPrimary" />

                    <TextView
                        android:id="@+id/id_textView_card_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:maxLines="1"
                        android:textAppearance="@style/TextAppearanceCardSmall"
                        android:textColor="@color/textColorPrimary" />

                    <TextView
                        android:id="@+id/id_textView_card_altitudegap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:maxLines="1"
                        android:textAppearance="@style/TextAppearanceCardSmall"
                        android:textColor="@color/textColorPrimary" />

                    <TextView
                        android:id="@+id/id_textView_card_geopoints"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:maxLines="1"
                        android:textAppearance="@style/TextAppearanceCardSmall"
                        android:textColor="@color/textColorPrimary" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/id_textView_card_maxspeedLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/card_trackinfo_max_speed"
                        android:textAppearance="@style/TextAppearanceCardSmall" />

                    <TextView
                        android:id="@+id/id_textView_card_averagespeedLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/card_trackinfo_average_speed"
                        android:textAppearance="@style/TextAppearanceCardSmall" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:textAppearance="@style/TextAppearanceCardSmall" />

                    <TextView
                        android:id="@+id/id_textView_card_placemarksLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:text="@string/card_trackinfo_placemarks"
                        android:textAppearance="@style/TextAppearanceCardSmall" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/id_textView_card_maxspeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:maxLines="1"
                        android:textAppearance="@style/TextAppearanceCardSmall"
                        android:textColor="@color/textColorPrimary" />

                    <TextView
                        android:id="@+id/id_textView_card_averagespeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:maxLines="1"
                        android:textAppearance="@style/TextAppearanceCardSmall"
                        android:textColor="@color/textColorPrimary" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:maxLines="1"
                        android:textAppearance="@style/TextAppearanceCardSmall"
                        android:textColor="@color/textColorPrimary" />

                    <TextView
                        android:id="@+id/id_textView_card_placemarks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:maxLines="1"
                        android:textAppearance="@style/TextAppearanceCardSmall"
                        android:textColor="@color/textColorPrimary" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>
